Criando autenticação de usuário.

--- a/core/templates/index.html
+++ b/core/templates/index.html
@@ -15,6 +15,7 @@
 <body>
     <header>
         <h1>Agenda Django</h1>
+        <a href="/logout">Sair</a>
     </header>
     
     {% block content %}
