--- a/core/templates/cadastrar-usuario.html
+++ b/core/templates/cadastrar-usuario.html
@@ -4,16 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login</title>
+    <title>Cadastra Usuário</title>
 </head>
 <body>
-    <h1>Faça Login</h1>
+    <h1>Cadastra Usuário</h1>
 
     <form action="submit" method="post"> {% csrf_token %}
         <input type="text" name="nome-usuario">
+        <input type="text" name="email">
         <input type="password" name="senha">
-        <button type="submit">ENTRAR</button>
-        <a href="/cadastrar-usuario"><button type="button">CRIAR CONTA</button></a>
+        <button type="submit">CRIAR USUÁRIO</button>
     </form>
 
     {% for mensagem in messages %}
