--- a/core/templates/index.html
+++ b/core/templates/index.html
@@ -1,3 +1,5 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
@@ -5,17 +7,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Agenda Django</title>
-    <style>
-        body {
-            background-color: black;
-            color: #fff;
-        }
-    </style>
+
+    <link rel="stylesheet" href="{% static "css/style.css" %}">
 </head>
 <body>
     <header>
         <h1>Agenda Django</h1>
-        <a href="/logout">Sair</a>
+        <h2>Olá, {{ usuario.username }}!</h2>
+        <ul>
+            <li><a href="/">AGENDAS</a></li>
+            <li><a href="/criar-agenda">CRIAR AGENDA</a></li>
+            <li><a href="/logout">SAIR</a></li>
+        </ul>
     </header>
     
     {% block content %}
