--- a/core/templates/index.html
+++ b/core/templates/index.html
@@ -8,12 +8,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Agenda Django</title>
 
-    <link rel="stylesheet" href="{% static "css/style.css" %}">
+    <link rel="stylesheet" href="{% static 'css/style.css' %}">
 </head>
 <body>
     <header>
-        <h1>Agenda Django</h1>
-        <h2>Olá, {{ usuario.username }}!</h2>
+        <div>
+            <h1>AGENDA</h1>
+            <h2>Olá, {{ usuario.username }}!</h2>
+        </div>
         <ul>
             <li><a href="/">AGENDAS</a></li>
             <li><a href="/criar-agenda">CRIAR AGENDA</a></li>
@@ -25,6 +27,5 @@
         <!-- Conteudo da Pagina -->
     {% endblock %}
 
-    <footer>Agenda Django © 2023</footer>
 </body>
 </html>
